--- a/webscrap_flask/templates/base.html
+++ b/webscrap_flask/templates/base.html
@@ -13,9 +13,10 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-primary" >
         <div class="container-fluid ">
             <ul class="navbar-nav ">
+                
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Web Scrape</a>
                     </li>
