--- a/webscrap_flask/templates/crud/index.html
+++ b/webscrap_flask/templates/crud/index.html
@@ -17,6 +17,7 @@
 			<h1>{{ url_post['title'] }}</h1>
 			<div class="about"> by {{ url_post['username']}} on {{ url_post['create_at'].strftime('%y-%m-%d')}} </div>
 			</div>
+			{% comment %} this might need changing to user_id {% endcomment %}
 			{% if g.user.get('id') == url_post['id'] %}
 			<a class"action" href="{{ url_for('scrap.update', id=url_post['id'])}}"> Edit</a>
 			<a class="action" href="{{ url_for('scrap.delete', id=url_post['id'])}}"> Delete </a>
