--- a/webscrap_flask/templates/base.html
+++ b/webscrap_flask/templates/base.html
@@ -22,7 +22,7 @@
                     </li>
                     {% if g.user %}
                         <li class="nav-item">
-                            <span> {{ g.user.get('username') }}</span>
+                            <span> {{ g.user['username'] }}</span>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
