--- a/webscrap_flask/templates/crud/update.html
+++ b/webscrap_flask/templates/crud/update.html
@@ -9,15 +9,15 @@
 <form method="POST">
    <label for="title"> Title </label>
    <input id="title" name="title" 
-   value="request.form.get('title') or post['title']" required>
+   value="{{request.form.get('title') or post['title']}}" required>
    <label for="url_post"> URL Body </label>
    <textarea id="url_post" name="url_post">
-    request.form.get('url') or post['url']
+   {{request.form.get('url') or post['url']}} 
    </textarea>
    <input type="submit" value="Save">
 
 </form>
-<form action="{{ url_for('scrap.delete'), id=post['id']}}" method="post">
- <input class="danger" type="submit" value="delete" onclick="return confirm (Are you sure you want to delete);">
+<form action="{{ url_for('scrap.delete', id=post['id']) }}" method="post">
+ <input class="danger" type="submit" value="delete" onclick="return confirm ('Are you sure you want to delete');">
 </form>
 {% endblock %}
