--- a/webscrap_flask/templates/base.html
+++ b/webscrap_flask/templates/base.html
@@ -18,7 +18,7 @@
             <ul class="navbar-nav ">
                 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Web Scrape</a>
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('scrap.index') }}">Web Scrape</a>
                     </li>
                     {% if g.user %}
                         <li class="nav-item">
