--- a/webscrap_flask/templates/crud/update.html
+++ b/webscrap_flask/templates/crud/update.html
@@ -18,6 +18,6 @@
 
 </form>
 <form action="{{ url_for('scrap.delete', id=post['id']) }}" method="post">
- <input class="danger" type="submit" value="delete" onclick="return confirm ('Are you sure you want to delete');">
+ <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure you want to delete');">
 </form>
 {% endblock %}
