--- a/webscrap_flask/templates/base.html
+++ b/webscrap_flask/templates/base.html
@@ -21,8 +21,9 @@
                         <a class="nav-link active" aria-current="page" href="{{ url_for('scrap.index') }}">Web Scrape</a>
                     </li>
                     {% if g.user %}
+                      
                         <li class="nav-item">
-                            <span> {{ g.user['username'] }}</span>
+                            <a class="nav-link" href="{{ url_for('scrap.file_lists') }}">Download</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
